# globant_data_engineering_challenge

./: .env  .gitignore  README.md  api.Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
api/: alembic.ini  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 8fa5f918b257_create_department.py  aa41ae170af8_update_tables.py  b9749fca5cd0_create_jobs.py  be3a48bc0586_create.py
api/app/: crud.py  crud_old.py  database.py  dependencies.py  main.py  main2.py  models.py  schemas.py
api/app/routes/: departments.py  hired_employees.py  jobs.py  migration.py  reports.py
api/crud/: __init__.py  base.py  crud_department.py  crud_hired_employee.py  crud_job.py
api/models/: __init__.py  base.py  department.py  hired_employee.py  job.py
api/schemas/: __init__.py  department.py  hired_employee.py  job.py
file_storage/job/: 2023-08-14 15:02:18.200722_corrupt_data.csv
other/: hired_employee_example.txt
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
